--- a/CLIP.ipynb
+++ b/CLIP.ipynb
@@ -162,8 +162,62 @@
    "source": [
     "# Text and Images together\n",
     "\n",
+    "\n",
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "    <b>TL;DR</b> \n",
+    "    <br>\n",
+    "    <ul>\n",
+    "        <li>Text is represented as\n",
+    "            <ul>\n",
+    "                <li>a sequence of integers: an integer index into the list of tokens in the vocabulary</li>\n",
+    "            </ul>\n",
+    "        <li>Using the ideas in the VQ-VAE, an image can be represented as\n",
+    "            <ul>\n",
+    "                <li>a sequence of integers: an integer index into a \"code book\": finite list of vectors</li>\n",
+    "            </ul>\n",
+    "        <li>Both text and image sequences can be reduced to a fixed-length vector: an embedding\n",
+    "        <li>Goal:\n",
+    "        <ul>\n",
+    "            <li>Create a shared embedding space for text and images</li>\n",
+    "            <li>Learn projection matrices\n",
+    "                <ul>\n",
+    "                    <li>One to project the text embedding into the shared space</li>\n",
+    "                    <li>One to project the image embedding into the shared space</li>\n",
+    "                </ul>\n",
+    "            <li>Such that the projections\n",
+    "                <ul>\n",
+    "                    <li>Of an image</li>\n",
+    "                    <li>And a text string that describes the image</li>\n",
+    "                    <li>Are close to one another in the shared space\n",
+    "                </ul>\n",
+    "            <li>and the projections</li>\n",
+    "                <ul>\n",
+    "                    <li>Of an image</li>\n",
+    "                    <li>And a text string that <b>does not</b> describes the image</li>\n",
+    "                    <li>Are <b>not close</b> to one another in the shared space\n",
+    "                </ul>\n",
+    "        </ul>\n",
+    "        <li>By creating text and image embeddings with this \"closeness\" property</li>\n",
+    "            <ul>\n",
+    "                <li>We can perform zero-shot Image Classification</li>\n",
+    "                <li>Classify images by matching them against sentences describing a possible class: \"Photo of a cat\"</li>\n",
+    "        </ul>\n",
+    "    </ul>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "**References**\n",
     "- [CLIP paper](https://cdn.openai.com/papers/Learning_Transferable_Visual_Models_From_Natural_Language_Supervision.pdf)\n",
     "- [LiT paper](https://arxiv.org/pdf/2111.07991.pdf)\n",
+    "\n",
     "\n",
     "The standard \"Computer Vision\" task is to learn an association between images and a predetermined set of labels.\n",
     "\n",
