--- a/DALL-E.ipynb
+++ b/DALL-E.ipynb
@@ -29,6 +29,7 @@
        "\\newcommand{\\X}{\\mathbf{X}}\n",
        "\\newcommand{\\KL}{\\mathbf{KL}}\n",
        "\\newcommand{\\E}{{\\mathbb{E}}}\n",
+       "\\newcommand{\\Reals}{{\\mathbb{R}}}\n",
        "\\newcommand{\\ip}{\\mathbf{{(i)}}}\n",
        "%\n",
        "% Test set\n",
@@ -48,6 +49,7 @@
        "\\newcommand{\\dim}{d}\n",
        "\\newcommand{\\idxspatial}{{\\text{idx}}}\n",
        "\\newcommand{\\summaxact}{\\text{max}}\n",
+       "\\newcommand{idxb}{\\mathbf{i}}\n",
        "%\n",
        "%\n",
        "\n",
@@ -70,7 +72,7 @@
        "\\newcommand{\\v}{\\mathbf{v}}\n",
        "\\newcommand{\\offset}{o}\n",
        "\\newcommand{\\o}{o}\n",
-       "\\newcommand{\\E}{\\mathbf{E}}\n",
+       "\\newcommand{\\Emb}{\\mathbf{E}}\n",
        "%\n",
        "%\n",
        "\\newcommand{\\loss}{\\mathcal{L}}\n",
@@ -83,6 +85,7 @@
        "% SVM\n",
        "\\newcommand{\\margin}{{\\mathbb{m}}}\n",
        "\\newcommand{\\lmk}{\\boldsymbol{\\ell}}\n",
+       "%\n",
        "%\n",
        "% Functions with arguments\n",
        "\\def\\xsy#1#2{#1^#2}\n",
@@ -103,10 +106,37 @@
        "\\def\\cnt#1{\\mathcal{count}_{#1}}\n",
        "\\def\\node#1{\\mathbb{#1}}\n",
        "%\n",
+       "\\def\\loc#1{{\\text{##} {#1}}}\n",
+       "%\n",
+       "\\def\\OrderOf#1{\\mathcal{O}\\left( #1 \\right)}\n",
+       "%\n",
+       "% Expectation operator\n",
+       "\\def\\Exp#1{\\underset{#1} {\\operatorname{\\mathbb{E}}} }\n",
+       "%\n",
+       "% VAE\n",
+       "\\def\\prs#1#2{\\mathcal{p}_{#2}(#1)}\n",
+       "\\def\\qr#1{\\mathcal{q}(#1)}\n",
+       "\\def\\qrs#1#2{\\mathcal{q}_{#2}(#1)}\n",
+       "%\n",
+       "% Reinforcement learning\n",
+       "\\newcommand{\\Actions}{{\\mathcal{A}}} \n",
+       "\\newcommand{\\actseq}{A}\n",
+       "\\newcommand{\\act}{a}\n",
+       "\\newcommand{\\States}{{\\mathcal{S}}}   \n",
+       "\\newcommand{\\stateseq}{S}  \n",
+       "\\newcommand{\\state}{s}\n",
+       "\\newcommand{\\Rewards}{{\\mathcal{R}}}\n",
+       "\\newcommand{\\rewseq}{R}\n",
+       "\\newcommand{\\rew}{r}\n",
+       "\\newcommand{\\transp}{P}\n",
+       "\\newcommand{\\statevalfun}{v}\n",
+       "\\newcommand{\\actvalfun}{q}\n",
+       "\\newcommand{\\disc}{\\gamma}\n",
+       "%\n",
+       "%\n",
        "\\newcommand{\\floor}[1]{\\left\\lfloor #1 \\right\\rfloor}\n",
        "\\newcommand{\\ceil}[1]{\\left\\lceil #1 \\right\\rceil}\n",
        "%\n",
-       "\\def\\loc#1{{\\text{##} {#1}}}\n",
        "%\n",
        "$$\n"
       ],
@@ -131,6 +161,41 @@
    },
    "source": [
     "# DALL-E: Text to Image Generation\n",
+    "\n",
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "    <b>TL;DR</b> \n",
+    "    <br>\n",
+    "    <ul>\n",
+    "        <li>Goal: given the description of an image, create an image matching the description</li>\n",
+    "        <li>The method will use the Language Modeling objective (\"predict the next token\")</li>\n",
+    "            <ul>\n",
+    "                <li>Same as we use for Text completion</li>\n",
+    "            </ul>\n",
+    "        <li>We have already learned how to represent an image as a sequence of \"image\" tokens</li>\n",
+    "        <li>We train a \"predict the next token\" model on examples of the form</li>\n",
+    "            <ul>\n",
+    "                <li>sequence of text tokens describing the image</li>\n",
+    "                <li>a separator token</li>\n",
+    "                <li>a <b>prefix</b> of a sequence of image tokens for an image matching the description</li>\n",
+    "            </ul>\n",
+    "            <li>At inference time: pass in only the text description tokens and the separator</li>\n",
+    "                <ul>\n",
+    "                    <li>The model should create a sequence of image tokens matching the description !</li>   \n",
+    "    </ul>\n",
+    "\n",
+    "     Training:  <text token> <text token> ... <text token> [SEP] <image token> <image token> ...\n",
+    "     Inference: <text token> <text token> ... <text token> [SEP] "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "**References**\n",
     "\n",
     "[paper](https://arxiv.org/pdf/2102.12092.pdf)\n",
     "\n",
@@ -469,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
