--- a/In_Context_Learning_Theory.ipynb
+++ b/In_Context_Learning_Theory.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -49,6 +49,7 @@
        "\\newcommand{\\dim}{d}\n",
        "\\newcommand{\\idxspatial}{{\\text{idx}}}\n",
        "\\newcommand{\\summaxact}{\\text{max}}\n",
+       "\\newcommand{idxb}{\\mathbf{i}}\n",
        "%\n",
        "%\n",
        "\n",
@@ -85,6 +86,7 @@
        "\\newcommand{\\margin}{{\\mathbb{m}}}\n",
        "\\newcommand{\\lmk}{\\boldsymbol{\\ell}}\n",
        "%\n",
+       "%\n",
        "% Functions with arguments\n",
        "\\def\\xsy#1#2{#1^#2}\n",
        "\\def\\rand#1{\\tilde{#1}}\n",
@@ -110,6 +112,11 @@
        "%\n",
        "% Expectation operator\n",
        "\\def\\Exp#1{\\underset{#1} {\\operatorname{\\mathbb{E}}} }\n",
+       "%\n",
+       "% VAE\n",
+       "\\def\\prs#1#2{\\mathcal{p}_{#2}(#1)}\n",
+       "\\def\\qr#1{\\mathcal{q}(#1)}\n",
+       "\\def\\qrs#1#2{\\mathcal{q}_{#2}(#1)}\n",
        "%\n",
        "% Reinforcement learning\n",
        "\\newcommand{\\Actions}{{\\mathcal{A}}} \n",
@@ -465,10 +472,13 @@
     "\n",
     "This suggests \n",
     "- that the exemplars are used to infer the *task to be performed*\n",
+    "\n",
+    "\n",
     "- once the task has been identified\n",
     "    - the exemplar mis-labeling is ignored\n",
     "- the model is able to perform the task as it was *trained* during training\n",
-    "\n"
+    "\n",
+    "See the [Signifier theory in the module](hPrompt_Engineering_Suggestions.ipynb#Signifier:-direct-specification)"
    ]
   },
   {
@@ -496,7 +506,7 @@
    "source": [
     "We note that this experiment *also* breaks the feature/label relationship $M$\n",
     "- we preserve the original labels $\\y^\\ip$ for exemplar $i$\n",
-    "- where is not necessarily related to $\\x_\\text{rand}^\\ip$ \n",
+    "- which is not necessarily related to $\\x_\\text{rand}^\\ip$ \n",
     "\n",
     "We can contrast the results of this experiment the effect of breaking $M$ alone.\n",
     "\n",
@@ -592,7 +602,7 @@
     "- the turquoise bar (third from left): random words\n",
     "\n",
     "The difference: Although we break $M$ in both cases\n",
-    "- in the \"random labels\" case: we labels are chosen from the correct output distribution $\\mathcal{C}$\n",
+    "- in the \"random labels\" case: the labels are chosen from the correct output distribution $\\mathcal{C}$\n",
     "- in the \"random words\" case: the labels come from a distribution other than $\\mathcal{C}$\n",
     "\n",
     "\n",
@@ -615,20 +625,47 @@
     "\n",
     "In this experiment\n",
     "- *format* is defined as the *pairing* of a feature and label within an exemplar\n",
-    "- not necessarily a *correct pairing*: mapping $M$ not necessarily correct\n",
-    "\n",
+    "- not necessarily a *correct pairing*: mapping $M$ not necessarily correct"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "One experiment is run\n",
     "- with *only* exemplar features (and no exemplar labels): $\\x^{(1)}, \\ldots, \\x^{(k)}$\n",
     "- natural comparison is with experiment of correct format\n",
     "    - $\\x^\\ip$\n",
-    "    - paired with random English words (from $\\mathcal{C}_\\text{rand}$) as labels\n",
-    "\n",
+    "    - paired with random English words (from $\\mathcal{C}_\\text{rand}$) as labels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "A second experiment is run\n",
     "- with *only* exemplar labels (and no exemplar features): $\\y^{(1)}, \\ldots, \\y^{(k)}$\n",
     "- natural comparison is with experiment of correct format\n",
     "    - a random $\\x^\\ip_\\text{rand}$ drawn from a text corpus \n",
-    "    - paired with $\\y^\\ip$\n",
-    "\n",
+    "    - paired with $\\y^\\ip$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "Both comparison experiments\n",
     "- preserve the format: feature/exemplar pairs\n",
     "- without preserving $M$\n",
@@ -802,7 +839,7 @@
     }
    },
    "source": [
-    "The model's LLM \"predict the next\" training objective did not specify to learn concepts.\n",
+    "The model's LLM \"predict the next\" training objective did not specify to goal of learning concepts.\n",
     "\n",
     "But \n",
     "- summarizing a large number of similar training documents (e.g., collection of biographies)\n",
@@ -905,67 +942,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
-   "outputs": [],
-   "source": [
-    "Given a concept, "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Index_Advanced.ipynb'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
     }
    ],
    "source": [
-    "root_nb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import Markdown as md"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "Root nb=Index_Advanced.ipynb"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "md(f\"Root nb={root_nb}\")\""
+    "print(\"Done\")"
    ]
   }
  ],
