--- a/Index_Advanced.ipynb
+++ b/Index_Advanced.ipynb
@@ -415,7 +415,13 @@
     "[How large should my Transformer be ?](Transformers_Scaling.ipynb)\n",
     "\n",
     "**Suggested reading**\n",
-    "- [Scaling laws](https://arxiv.org/pdf/2001.08361.pdf)\n"
+    "- [Scaling laws](https://arxiv.org/pdf/2001.08361.pdf)\n",
+    "\n",
+    "**Further reading**\n",
+    "- Inference budget\n",
+    "    - [Transformer Inference Arithmetic](https://kipp.ly/transformer-inference-arithmetic/)\n",
+    "    - [LLaMA: Open and Efficient Foundation Language Models](https://arxiv.org/pdf/2302.13971.pdf)\n",
+    "    - [Large language models aren't trained enough](https://finbarr.ca/llms-not-trained-enough/)\n"
    ]
   },
   {
@@ -633,7 +639,7 @@
     "- [Vision Transformer]([paper](https://arxiv.org/pdf/2010.11929.pdf)\n",
     "- [LiT paper](https://arxiv.org/pdf/2111.07991.pdf)\n",
     "\n",
-    "## Contrastive Learning Objective\n",
+    "##  <font style=\"background-color:MediumSeaGreen;\">Contrastive Learning Objective (skipped)</font>\n",
     "\n",
     "CLiP used a Contrastive Learning Objective\n",
     "- find embeddings to \n",
@@ -705,42 +711,23 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## Parameter Efficient Transfer Learning\n",
-    "\n",
-    "Transfer learning may be the \"future of Deep Learning\" in that we can adapt models (that are too big for us to train on our own) to our own tasks.\n",
-    "\n",
-    "But Fine-Tuning a Pre-Trained model involves training a lot of parameters when the base model is large.\n",
-    "\n",
-    "This may be difficult for a variety of reasons.\n",
-    "\n",
-    "Can we adapt a Pre-Trained base model to a new task *without* training a large number of parameters ?\n",
-    "\n",
-    "- [Parameter Efficient Transfer Learning](ParameterEfficient_TransferLearning.ipynb)\n",
-    "\n",
-    "**Suggested reading**\n",
-    "\n",
-    "- [Parameter Efficient Transfer Learning - article](https://lightning.ai/pages/community/article/understanding-llama-adapters/)\n",
-    "\n",
-    "Adapters\n",
-    "- [Parameter Efficient Transfer Learning for NLP](https://arxiv.org/pdf/1902.00751.pdf)\n",
-    "- [LLM Adapters](https://arxiv.org/pdf/2304.01933.pdf)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
     "# Week 7\n",
     "\n",
-    "##  Combining a LLM with external capabilities\n",
+    "## Stop-gradient operator and Straight-through Estimator\n",
+    "\n",
+    "How do we handle operations that are **not** differentiable ?\n",
+    "- Quantization in the VQ-VAE\n",
+    "- Routing in the Mixture of Experts\n",
+    "\n",
+    "There is a special operator in Keras that helps us with the task.\n",
+    "\n",
+    "- [Quantization in the VQ-VAE: dealing with non-differentiable operations](VQ_VAE_Generative.ipynb#Quantization-is-not-differentiable)\n",
+    "\n",
+    "## Combining a LLM with external capabilities\n",
     "\n",
     "The module on Scaling argued that perhaps some models have *too many* parameters (given the size of the training dataset).\n",
     "Many model parameters probably encode \"world knowledge\" (facts) rather than \"task knowledge\" (how to solve a task). \n",
@@ -791,9 +778,6 @@
     "In this module, we explore the various methods.\n",
     "\n",
     "- [Prompt Engineering Overview](Prompt_Engineering.ipynb)\n",
-    "\n",
-    "\n",
-    "- [Prompt Engineering suggestions](Prompt_Engineering_Sugestions.ipynb)\n",
     "- [Using an LLM as a Prompt Engineer](Prompt_Engineering_APE.ipynb)\n",
     "    - module also referenced in [Synthetic Data: Instruction Following](LLM_Instruction_Following_Synthetic_Data.ipynb)\n",
     "- Optimizing the prompt by minimizing the Loss\n",
@@ -801,6 +785,11 @@
     "- Few-shot and Zero shot learning are included in the prompting techniques studied.  Why do they work ?\n",
     "    - [In Context Learning: Theory](In_Context_Learning_Theory.ipynb)\n",
     "\n",
+    "Can humans even write good prompts ? Will they need to ?\n",
+    "- [Automatic \"upsampling\" of human text prompts for Image creation](Prompt_Engineering_Text_Upsampling.ipynb)\n",
+    "\n",
+    "Some theories behind prompt engineering\n",
+    "- [Prompt Engineering suggestions](Prompt_Engineering_Suggestions.ipynb)\n",
     "\n",
     "**Suggested reading**\n",
     "\n",
@@ -814,6 +803,35 @@
     "- [How does in-context learning work ?](https://arxiv.org/pdf/2202.12837.pdf)\n",
     "- [The Power of Scale for Parameter-Efficient Prompt Tuning](https://arxiv.org/pdf/2104.08691.pdf)\n",
     "- [LLMs are Human-Level Prompt Engineers](https://arxiv.org/pdf/2211.01910.pdf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Parameter Efficient Transfer Learning\n",
+    "\n",
+    "Transfer learning may be the \"future of Deep Learning\" in that we can adapt models (that are too big for us to train on our own) to our own tasks.\n",
+    "\n",
+    "But Fine-Tuning a Pre-Trained model involves training a lot of parameters when the base model is large.\n",
+    "\n",
+    "This may be difficult for a variety of reasons.\n",
+    "\n",
+    "Can we adapt a Pre-Trained base model to a new task *without* training a large number of parameters ?\n",
+    "\n",
+    "- [Parameter Efficient Transfer Learning](ParameterEfficient_TransferLearning.ipynb)\n",
+    "\n",
+    "**Suggested reading**\n",
+    "\n",
+    "- [Parameter Efficient Transfer Learning - article](https://lightning.ai/pages/community/article/understanding-llama-adapters/)\n",
+    "\n",
+    "Adapters\n",
+    "- [Parameter Efficient Transfer Learning for NLP](https://arxiv.org/pdf/1902.00751.pdf)\n",
+    "- [LLM Adapters](https://arxiv.org/pdf/2304.01933.pdf)\n"
    ]
   },
   {
@@ -901,6 +919,46 @@
     "## Final Project\n",
     "\n",
     "[Assignment notebook](assignments/FineTuning_HF/FineTune_FinancialPhraseBank.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Additional Deep Learning resources\n",
+    "\n",
+    "Here are some resources that I have found very useful.\n",
+    "\n",
+    "Some of them are very nitty-gritty, deep-in-the-weeds (even the \"introductory\" courses)\n",
+    "- For example: let's make believe PyTorch (or Keras/TensorFlow) didn't exists; let's invent Deep Learning without it !\n",
+    "    - You will gain a deeper appreciation and understanding by re-inventing that which you take for granted\n",
+    "    \n",
+    "\n",
+    "## [Andrej Karpathy course: Neural Networks, Zero to Hero](https://karpathy.ai/zero-to-hero.html)\n",
+    "- PyTorch\n",
+    "- Introductory, but at a very deep level of understanding\n",
+    "    - you will get very deep into the weeds (hand-coding gradients !) but develop a deeper appreciation\n",
+    "    \n",
+    "## fast.ai\n",
+    "\n",
+    "`fast.ai` is a web-site with free courses from Jeremy Howard.\n",
+    "- PyTorch\n",
+    "- Introductory and courses \"for coders\"\n",
+    "- Same courses offered every few years, but sufficiently different so as to make it worthwhile to repeat the course !\n",
+    "    - [Practical Deep Learning](https://course.fast.ai/)\n",
+    "    - [Stable diffusion](https://course.fast.ai/Lessons/part2.html)\n",
+    "        - Very detailed, nitty-gritty details (like Karpathy) that will give you a deeper appreciation\n",
+    "        \n",
+    "## [Stefan Jansen: Machine Learning for Trading](https://github.com/stefan-jansen/machine-learning-for-trading)\n",
+    "\n",
+    "An excellent github repo with notebooks\n",
+    "- using Deep Learning for trading\n",
+    "- Keras\n",
+    "- many notebooks are cleaner implementations of published models\n"
    ]
   },
   {
