--- a/Prompt_Engineering.ipynb
+++ b/Prompt_Engineering.ipynb
@@ -420,18 +420,40 @@
     "\n",
     "Many of these are anecdotal.  We prefer measurement\n",
     "- guides that summarize empirical studies\n",
-    "- and provide reference to the source paper\n",
-    "\n",
+    "- and provide reference to the source paper"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## [LearnPrompting.org Course](https://learnprompting.org/docs/intro)\n",
     "\n",
     "A fairly simple (free and open source) course\n",
     "- great way to find out what is interesting\n",
     "- **and** has references to papers so as to enable deeper understanding\n",
     "\n",
+    "For example, some [basics](https://learnprompting.org/docs/category/-basics)\n",
+    "- [role playing](https://learnprompting.org/docs/basics/roles) to control the style of output\n",
+    "- [giving instructions](https://learnprompting.org/docs/basics/instructions) to *precisely* define the task"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## [Prompting Guide](https://www.promptingguide.ai/)\n",
     "\n",
     "Another fairly simple guide (ignore the promoted -- and paid -- course)\n",
-    "- also has references to papers\n"
+    "- also has references to papers"
    ]
   },
   {
@@ -485,7 +507,17 @@
     "    - no experience needed and requires advanced education\n",
     "- UK based\n",
     "    - \"graduate\" means college graduate\n",
-    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "The metric used is \"precision at 95% recall\"\n",
     "- given that the model achieves a recall of at least 95%\n",
     "$$\n",
@@ -600,7 +632,7 @@
    "source": [
     "### Instructions: variants\n",
     "\n",
-    "The prompt uses [Role prompting](earnprompting.org/docs/basics/roles)\n",
+    "The prompt uses [Role prompting](https://learnprompting.org/docs/basics/roles)\n",
     "- the *role* the Assistant is to play in providing the response\n",
     "\n",
     ">You are an AI expert in career advice. You are tasked\n",
