--- a/Prompt_Engineering_APE.ipynb
+++ b/Prompt_Engineering_APE.ipynb
@@ -49,6 +49,7 @@
        "\\newcommand{\\dim}{d}\n",
        "\\newcommand{\\idxspatial}{{\\text{idx}}}\n",
        "\\newcommand{\\summaxact}{\\text{max}}\n",
+       "\\newcommand{idxb}{\\mathbf{i}}\n",
        "%\n",
        "%\n",
        "\n",
@@ -159,21 +160,12 @@
     }
    },
    "source": [
-    "**References**\n",
-    "- [LLMs are Human-Level Prompt Engineers](https://arxiv.org/pdf/2211.01910.pdf)\n",
-    "    - [APE summary](https://sites.google.com/view/automatic-prompt-engineer)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "# Using an LLM to improve prompts to an LLM\n",
     "\n",
+    "**References**\n",
+    "- [LLMs are Human-Level Prompt Engineers](https://arxiv.org/pdf/2211.01910.pdf)\n",
+    "    - [APE summary](https://sites.google.com/view/automatic-prompt-engineer)\n",
+    "    \n",
     "The Automatic Prompt Engineer (APE) is a system to *improve* upon prompts\n",
     "- given a prompt\n",
     "- APE will create a prompt that is *more effective*\n",
@@ -193,29 +185,62 @@
    "source": [
     "# Using APE to improve upon Instruction Following\n",
     "\n",
-    "Many prompts are of the form\n",
-    "- a textual *task description* (*instruction*) that describes a task to be performed\n",
-    "- zero or more exemplars: demonstrating the input/output relationship described by the instruction\n",
+    "APE has been demonstrated to improve prompts **for a specific task** (not improvement of general prompts)\n",
     "\n",
-    "Given just the exemplars\n",
-    "- APE can *create* the \"best\" instruction"
+    "The task is: creating *instructions*\n",
+    "- to use in fine-tuning a raw LLM into an helpful Assistant\n",
+    "- we described Instruction Following in the module [Synthetic data for Instruction Following](LLM_Instruction_Following_Synthetic_Data.ipynb)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
+    "In order to create an example of Instruction Following behavior we need a prompt with multiple parts\n",
+    "- a textual *task description* (*instruction*) that describes a task to be performed\n",
+    "- zero or more exemplars: demonstrating the input/output relationship described by the instruction\n",
     "\n",
+    "Given just the exemplars (the second part)\n",
+    "- we want APE to *create*  the \"best\" instruction (first part)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "The APE method for automatically generating \"good\" instructions is conceptually simple.\n",
+    "\n",
+    "As a first step, we get an LLM to generate plausible instructions.\n",
+    "- Given the exemplars\n",
+    "- Create a prompt\n",
+    "- Whose \"response\" is an *instruction* that is a plausible description of the input/output relation in the exemplars\n",
+    "\n",
+    "We do this several times to generate multiple plausible instructions, conditional on the exemplars."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "In a second step. we rank the multiple instruction candidates created in the first step.\n",
+    "- we create a prompt requesting that the LLM *rank* the instructions created in the first step\n",
+    "- we filter the instructions to the most highly ranked results\n",
+    "\n",
+    "As an optional third step, we can improve upon the *diversity* of the instructions selected in Step 2\n",
+    "- create a prompt requesting that the LLM generate a *variation* of a selected instruction\n",
     "- Use an LLM to create a distribution of instruction, conditional on the exemplars\n",
-    "- Evaluate the consistency of the instruction with the exemplars\n",
-    "- Optionally\n",
-    "    - Choose the instructions with highest evaluation\n",
-    "    - Ask a LLM to generate variations of each instruction\n",
     "    \n",
     "    "
    ]
@@ -250,11 +275,11 @@
    "source": [
     "Step 1: LLM as Inference Model\n",
     "\n",
-    "Get the LLM to create an multiple *instruction* candidates, given the intended response\n",
-    "- *response* to a (yet to be created) instruction\n",
+    "Goal: Get the LLM to create multiple *instruction* candidates, given the intended response\n",
+    "- intended *response* are the exemplars demonstrating the input/output relation\n",
     "    - `Input: prove, Output: disprove`\n",
     "\n",
-    "Given the context (response), the LLM is prompted to generated the *instruction* that could cause the given response\n",
+    "Given the context (response), the LLM is prompted to generate an *instruction* that could cause the given response\n",
     "- prompt is a Masked Language Modeling task: fill in the mask (`<INSERT>`)\n",
     "\n",
     "This is in the same spirit as [Backtranslation](LLM_Instruction_Following_Synthetic_Data.ipynb#Instruction-Backtranslation)\n",
@@ -272,21 +297,25 @@
    "source": [
     "Steps 2  and 3: LLM as Scoring Model\n",
     "\n",
-    "Evaluate each candidate instruction created by the LLM in Step 1\n",
+    "Step 1 has created multiple possible instructions that are consistent with the exemplars.\n",
     "\n",
-    "The evaluation is performed by prompting the LLM to compute the likelihood\n",
-    "- that a given response\n",
+    "We wish to rank them.\n",
+    "\n",
+    "The ranking is performed by prompting the LLM to compute the likelihood\n",
+    "- that a given response (an exemplar)\n",
     "        Input: direct, Output: indirect\n",
     "        \n",
     "- is consistent with each candidate instruction\n",
     "\n",
-    "The candidate instruction with the highest likelihood is selected as the Instruction to use.\n",
+    "The candidate instructions are ranked from highest Likelihood to lowest.\n",
     "\n",
     "**Note**\n",
     "\n",
     "Likelihood is expressed as the log probability\n",
-    "-  is a negative number since probabilities are fractions\n",
-    "- less negative numbers are higher probabilities\n",
+    "- is a negative number since probabilities are fractions\n",
+    "    - less negative numbers are higher probabilities\n",
+    "- is the probability of the generated sequence\n",
+    "    - product of the individual probabilities of the tokens in the sequence\n",
     "        "
    ]
   },
@@ -298,7 +327,9 @@
     }
    },
    "source": [
-    "Steps 4 and 4 (Optional): LLM as Re-sampling model\n",
+    "Steps 4  (Optional): LLM as Re-sampling model\n",
+    "\n",
+    "Here, we create multiple variants of a highly ranked instruction.\n",
     "\n",
     "Given the candidate Instruction selected by the previous step\n",
     "- generate a variation of the instruction\n",
@@ -463,6 +494,21 @@
     "to find a zero-shot prompt appendage that improves upon \n",
     ">Let's think step by step\n",
     "\n",
+    "That is: the instruction consists of\n",
+    "- the task description\n",
+    "- followed by a \"magic suffix\" (e.g., \"let's think step by step\")\n",
+    "\n",
+    "We want to find the best \"magic suffix\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "The authors use the following template (where `INPUT` and `OUTPUT` are place-holders for an actual question and answer pair).\n",
     "\n",
     "        Instruction: Answer the following question\n",
