--- a/Prompt_Engineering_Text_Upsampling.ipynb
+++ b/Prompt_Engineering_Text_Upsampling.ipynb
@@ -49,6 +49,7 @@
        "\\newcommand{\\dim}{d}\n",
        "\\newcommand{\\idxspatial}{{\\text{idx}}}\n",
        "\\newcommand{\\summaxact}{\\text{max}}\n",
+       "\\newcommand{idxb}{\\mathbf{i}}\n",
        "%\n",
        "%\n",
        "\n",
@@ -159,26 +160,79 @@
     }
    },
    "source": [
-    "# In-context learning: what is a prompt expected to do ?\n",
+    "# Text to image\n",
     "\n",
-    "Consider $k$ exemplars  \n",
-    "$$\\langle \\x^{(1)}, \\y^{(1)} \\rangle, \\ldots, \\langle \\x^{(k)}, \\y^{(k)} \\rangle\n",
+    "Text to image models are trained on examples that are pairs\n",
+    "- image\n",
+    "- text  describing the image\n",
+    "\n",
+    "It has been observed that longer, more descriptive text results in improved image generation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# The need for synthetic examples for training Text to Image\n",
+    "\n",
+    "But one of the easiest sources if images/text pairs are\n",
+    "- images from the Internet\n",
+    "- that have text captions\n",
+    "- that are usually short"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "One solution to this problem is to create a model that takes as input\n",
+    "- an image\n",
+    "- a short caption\n",
+    "\n",
+    "and outputs a longer, more descriptive caption.\n",
+    "\n",
+    "That is: we create an *image captioner* to create *synthetic* training examples for the Text to Image model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The Image Captioner model takes input example\n",
+    "- pair of image $i$ and text caption $t$ (sequence)\n",
+    "$$\\langle t_{(1:T^\\ip)}^\\ip, i^\\ip\\rangle$$\n",
+    "\n",
+    "In order to make images input compatible with text input\n",
+    "- Use CLIP image embedding (fixed length vector) $F(i^\\ip)$ of image of $i^\\ip$\n",
+    "    - single vector, length same as length of text tokens"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The model is trained on the Language Modeling objective\n",
+    "- predict the next token of the highly descriptive caption\n",
+    "- conditioned on all previous caption tokens\n",
+    "- AND image embedding $F(i^\\ip)$\n",
     "$$\n",
-    "\n",
-    "These exemplars need to be encoded into a single *context*\n",
-    "$\\dot \\x$\n",
-    "amenable to a model solving text-continuation (\"predict the next\").\n",
-    "\n",
-    "For example\n",
-    "\n",
-    "$$\n",
-    "\\begin{array} \\\\\n",
-    "\\dot \\x = \\text{concat} (  & \\x^{(1)}, \\langle \\text{SEP}_1 \\rangle, \\y^{(1)}, \\langle \\text{SEP}_2 \\rangle,  \\\\\n",
-    "              &   \\vdots \\\\\n",
-    "              &   \\x^{(k)}, \\langle \\text{SEP}_1 \\rangle, \\y^{(k)}, \\langle \\text{SEP}_2 \\rangle, \\\\\n",
-    "              &   \\x \\\\\n",
-    "              & ) \\\\\n",
-    "\\end{array}\n",
+    "\\loss^\\ip = \\sum_j { \\log \\pr{t^\\ip_{(j)} \\, | \\, t^\\ip_{(1:j-1)} ; F(i^\\ip) }  }\n",
     "$$"
    ]
   },
@@ -186,59 +240,19 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# [Prompt Programming for Large Language Models: Beyond the Few-Shot Paradigm](https://arxiv.org/pdf/2102.07350.pdf)\n",
-    "\n",
-    "But what is the role of the exemplars ?\n",
-    "\n",
-    "Our initial supposition\n",
-    "- to *demonstrate* a new Target Task by giving the feature/label mapping relationship\n",
-    "- *meta-learning*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "subslide"
     }
    },
    "source": [
-    "Yet\n",
-    "the paper [Prompt Programming for Large Language Models:\n",
-    "Beyond the Few-Shot Paradigm](https://arxiv.org/pdf/2102.07350.pdf)  demonstrates that\n",
-    "- increasing $k$ (adding more exemplars) sometimes *hurts* performance\n",
-    "- keeping $k$ fixed\n",
-    "    - the exact form of the context affects performance\n",
+    "The trained Image Captioner is used to\n",
+    "[\"Upsample prompts\"](https://cdn.openai.com/papers/dall-e-3.pdf#page=9)\n",
+    "- creaeting longer, more vivid text.\n",
     "\n",
-    "This is inconsistent with the meta-learning supposition.\n",
+    "This is achieved in two steps.\n",
     "\n",
-    "They propose a new theory about the context's role\n",
-    "- to locate a task *learned in pre-training*\n",
-    "\n",
-    "They offer suggestions on crafting prompts according to this theory"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "**Note**\n",
-    "\n",
-    "This is a theory, not proven fact.\n",
-    "\n",
-    "Nonetheless, the suggestions for prompt engineering \n",
-    "- are interesting\n",
-    "- may lead to better performance.\n",
-    "\n",
-    "We present the suggestions in turn"
+    "In the first (pre-training) step\n",
+    "- The Image Captioner is pre-trained to create *short synthetic captions*\n",
+    "- describes **main subject** "
    ]
   },
   {
@@ -249,18 +263,11 @@
     }
    },
    "source": [
-    "## Signifier: direct specification\n",
+    "The pre-trained Image Captioner is fine-tuned in a second step to create\n",
+    "- *descriptive synthetic captions*\n",
+    "- **long, highly descriptive captions**\n",
     "\n",
-    "The theory is that the LLM has learned certain behaviors (functions ?) *during pre-training*.\n",
-    "\n",
-    "In order to get the LLM to perform the task at inference time\n",
-    "- we need to use a *signifier*\n",
-    "- block of text that has become associated with the desired behavior\n",
-    "- a **zero shot** prompt\n",
-    "\n",
-    "Unlike an examplar\n",
-    "- it specifies *what* the Target Task is\n",
-    "- not *how* to perform it\n"
+    "The DALL E 3 Text to Image model is trained on the synthetic examples with descriptive synthetic captions*"
    ]
   },
   {
@@ -271,56 +278,14 @@
     }
    },
    "source": [
-    "So Prompt Engineering in this theory is discovering the signifier (name of the function ?) for the desired task.\n",
-    "\n",
-    "For example, for a Target Task that translates from French to English.\n",
-    "\n",
-    "The following contexts uses a direct form (guessed) of the signifier\n",
-    "\n",
-    "        French sentence is <French phrase>. Translate from French to English.\n",
-    "        \n",
-    "- n.b., we use descriptions bracketed by < and > as place-holders for user-supplied values.\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## Signifier: via demonstration\n",
-    "\n",
-    "The hypothesis is that the LLM has essentially learned \"parameterized functions\" through examples.\n",
-    "\n",
-    "Exemplars are\n",
-    "- instances of the function being called\n",
-    "- with different formal parameters"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Here we provide a demonstration of the function\n",
-    "- similar to the meta-learning theory\n",
-    "- but with the objective of invoking a task learned in pre-training\n",
-    "\n",
-    "        French: <French phrase 1>\n",
-    "        English: <English translation 1>\n",
-    "        \n",
-    "        ...\n",
-    "        French: <French phrase k>\n",
-    "        English: <English translation k>\n",
-    "        \n",
-    "        French: <source phrase>\n",
-    "        English:"
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center><strong>DALL E 3 Prompt \"upsampling\"</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/DALL_E_3_prompt_finetuning.png\" width=80%></td>\n",
+    "    </tr>\n",
+    "</table>"
    ]
   },
   {
@@ -331,19 +296,14 @@
     }
    },
    "source": [
-    "## Constraining behavior\n",
+    "# User prompts need to be Prompt Engineered\n",
     "\n",
-    "Remember, the LLM was trained in the text-continuation task (predict the next).\n",
-    "\n",
-    "The result of the continuation may be inconsistent with our intent but be a valid continuation anyway.\n",
-    "\n",
-    "Consider the following context\n",
-    "\n",
-    "        Translate the following French sentence to English.\n",
-    "        <source phrase>\n",
-    "\n",
-    "The LLM might continue with more French\n",
-    "- continuing the thought of `<source phrase>` in French"
+    "Although DALL E 3 can create very nice images\n",
+    "- human users **may not** write highly descriptive text prompts\n",
+    "- Fundamental Law of Machine learning violated !\n",
+    "    - out of sample examples (user generated)\n",
+    "    - not from same distribution a training examples (generated by Image Captioner)\n",
+    "    "
    ]
   },
   {
@@ -354,14 +314,9 @@
     }
    },
    "source": [
-    "Adding *syntactic constraints* to the context may invoke behavior more consistent with the Target Task.\n",
-    "- Adding delimiters\n",
-    "- That might be the purpose of `French`, `English` and the newline character in\n",
-    "\n",
-    "\n",
-    "        French: <French phrase 1>\n",
-    "        English: <English translation 1>\n",
-    "- rather than being an actual *demonstration* "
+    "The solution is to use an LLM\n",
+    "- to perform the prompt engineering\n",
+    "- translating short user prompts into highly descriptive prompts"
    ]
   },
   {
@@ -372,28 +327,76 @@
     }
    },
    "source": [
-    "# Imitation\n",
+    "We can use a system prompt (?) with exemplars of up-sampling\n",
+    "- to get the LLM to \"up-sample\" user prompt to a highly descriptive prompt\n",
     "\n",
-    "This seems to be equivalent to Role Playing\n",
-    "- achieving the desired behavior by requesting the LLM \"imitate\" a subject-area expert\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center><strong>DALL E 3 System Prompt to generate \"upsampling\"</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/DALL_E_3_prompt_for_upsampling.png\" width=80%></td>\n",
+    "    </tr>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Notice the *exemplars* of upsampling\n",
+    "- in the JSON at the end\n",
+    "- user input, followed by assistant response\n",
+    "    - user input exemplar denoted `< user input example >`\n",
     "\n",
-    "Rather than specifying *how* to perform a Target Task\n",
-    "- invoke an expert to imitate\n",
     "\n",
-    "        A French phrase is provided: <source_phrase>\n",
-    "        The masterful French translator flawlessly\n",
-    "        translates the phrase into English:\n"
+    "       { role: \"user\",\n",
+    "         content: \"Create an imaginative image description caption for the user input \"< user input example >\"\n",
+    "        }\n",
+    "       { role: \"assistant\",\n",
+    "         content: \"< highly descriptive assistant output example >\"\n",
+    "        }\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center><strong>DALL E 3 Prompt \"upsampling\": results</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/DALL_E_3_prompt_upsampling.png\" width=80%></td>\n",
+    "    </tr>\n",
+    "</table>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Done\")"
    ]
