--- a/Prompt_Engineering_Tuning.ipynb
+++ b/Prompt_Engineering_Tuning.ipynb
@@ -49,6 +49,7 @@
        "\\newcommand{\\dim}{d}\n",
        "\\newcommand{\\idxspatial}{{\\text{idx}}}\n",
        "\\newcommand{\\summaxact}{\\text{max}}\n",
+       "\\newcommand{idxb}{\\mathbf{i}}\n",
        "%\n",
        "%\n",
        "\n",
@@ -653,13 +654,31 @@
     "The following table compares various forms of adaptation\n",
     "- Fine-tuning (model tuning)\n",
     "- Adapter (from the module on [Paramter Efficient Transfer Learning](ParameterEfficient_TransferLearning.ipynb#Adapters))\n",
-    "- Prefix Tuning\n",
-    "\n",
+    "- Prefix Tuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "The number in parenthesis next to the name of the adaptation is\n",
     "- the size of the adapted parameters as a fraction of base model parameters.\n",
-    "- note that for all metrics except TER, a bigger performance number is better\n",
-    "\n",
-    "We can see that Prefix Tuning\n",
+    "- note that for all metrics except TER, a bigger performance number is better"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "We can see that Prefix Tuning (row 5 of table)\n",
     "- using only a small number of adapted parameters ($0.1 \\%$ of base model parameters)\n",
     "- performs similarly *or better* than full Fine-Tuning for many tasks\n",
     "    - evaluated on base models which are the Medium and Large variants of GPT-2\n",
@@ -696,15 +715,24 @@
     "## Prefix length\n",
     "\n",
     "How long does the prefix need to be ?\n",
-    "- how many pseudo tokens in the prompt\n",
-    "\n",
+    "- how many pseudo tokens in the prompt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "The results of several experiments show\n",
     "- a small number (10) of pseudo tokens achieves most of the performance\n",
     "- hence, the number of Target task specific parameters does not need to be large\n",
     "\n",
     "<table>\n",
     "    <center><strong>Effect of Prefix Length on Adaptation via Prefix Tuning</strong></center>\n",
-    "    <img src=\"images/PrefTuning_length.png\" width=70%>\n",
+    "    <img src=\"images/PrefTuning_length.png\" width=60%>\n",
     "    <br>\n",
     "    <center>n.b., for the TER metric: smaller is better</center>\n",
     "    <br>\n",
