--- a/Retriever_plus_LLM.ipynb
+++ b/Retriever_plus_LLM.ipynb
@@ -49,6 +49,7 @@
        "\\newcommand{\\dim}{d}\n",
        "\\newcommand{\\idxspatial}{{\\text{idx}}}\n",
        "\\newcommand{\\summaxact}{\\text{max}}\n",
+       "\\newcommand{idxb}{\\mathbf{i}}\n",
        "%\n",
        "%\n",
        "\n",
@@ -200,8 +201,17 @@
     "- returns a set $\\z$ consisting of the top $K$ items in the Knowledge Store that are most relevant to $\\x$\n",
     "$$\n",
     "\\z = \\text{Retriever}(\\x)\n",
-    "$$\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "The *Generator*: a Neural Network\n",
     "- takes the question $\\x$ and relevant items $\\z$\n",
     "- returns $\\y$: the text that is the answer to questions $\\x$\n",
