--- a/Straight_Through_Estimator.ipynb
+++ b/Straight_Through_Estimator.ipynb
@@ -49,6 +49,7 @@
        "\\newcommand{\\dim}{d}\n",
        "\\newcommand{\\idxspatial}{{\\text{idx}}}\n",
        "\\newcommand{\\summaxact}{\\text{max}}\n",
+       "\\newcommand{idxb}{\\mathbf{i}}\n",
        "%\n",
        "%\n",
        "\n",
@@ -184,7 +185,7 @@
     "\n",
     "For notational consistency\n",
     "- we will explain Back Propagation by equating operators and layers\n",
-    "- the operator for layer $i$ maps input $y_{(i-1)}$ to output $\\y_\\ip$\n",
+    "- the operator for layer $\\ll$ maps input $\\y_{(\\ll-1)}$ to output $\\y_\\llp$\n",
     "- this works for operators organized in non-layered architecture as well"
    ]
   },
@@ -196,9 +197,9 @@
     }
    },
    "source": [
-    "Our eventual goal is to compute the gradient of the Loss with respect to the weights $\\W_i$ of each layer $\\ll$\n",
+    "Our eventual goal is to compute the gradient of the Loss with respect to the weights $\\W_\\llp$ of each layer $\\ll$\n",
     "$$\n",
-    "\\frac{\\partial \\loss}{\\partial \\W_\\ll}\n",
+    "\\frac{\\partial \\loss}{\\partial \\W_\\llp}\n",
     "$$\n",
     "\n",
     "Back Propagation achieves this\n",
@@ -220,6 +221,22 @@
     "\n",
     "It is the derivative of $\\loss$ with respect to the output of layer $\\ll$, i.e., $\\y_\\llp$.\n",
     "\n",
+    "The desired gradient to update the weights follows by the chain rule using\n",
+    "- the Loss Gradient $\\loss'_\\llp$\n",
+    "- the local gradient $\\frac{\\partial \\y_\\llp}{\\partial \\W_\\llp}$\n",
+    "$$\n",
+    "\\frac{\\partial \\loss}{\\partial \\W_\\llp} = \\loss'_\\llp * \\frac{\\partial \\y_\\llp}{\\partial \\W_\\llp}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "Back propagation inductively updates the Loss Gradient from the output of layer $\\ll$ to its inputs (e.g., prior layer's output $\\y_{(\\ll-1)}$)\n",
     "- Given $\\loss'_\\llp$\n",
     "- Compute $\\loss'_{(\\ll-1)}$\n",
@@ -249,7 +266,8 @@
     "That is:\n",
     "- the upstream Loss Gradient $\\loss'_\\llp$\n",
     "- is modulated by the local gradient $\\frac{\\partial \\y_\\llp}{\\partial \\y_{(\\ll-1)}}$\n",
-    "- where the \"layer\" is the operation transforming input $\\y_{(\\ll-1)}$ to output $\\y_\\llp$"
+    "- where the \"layer\" is the operation transforming input $\\y_{(\\ll-1)}$ to output $\\y_\\llp$\n",
+    "\n"
    ]
   },
   {
@@ -315,21 +333,19 @@
    },
    "source": [
     "A common choice for the proxy function is the *identity function*\n",
-    "- operator implements $\\y_\\llp = \\y_{(\\ll-1)}$\n",
+    "- operator implements $\\tilde\\y_\\llp = \\y_{(\\ll-1)}$\n",
     "- hence the formerly problematic gradient\n",
     "$$\\frac{\\partial \\y_\\llp}{\\partial \\y_{(\\ll-1)}}\n",
     "$$\n",
     "is replaced by \n",
     "$$\n",
     "\\begin{array} \\\\\n",
-    "\\frac{\\partial \\y_\\llp}{\\partial \\y_{(\\ll-1)}} & = & \\frac{\\partial \\y_{(\\ll-1)}}{\\partial \\y_{(\\ll-1)}} & \\text{since proxy implements } \\y_\\llp = \\y_{(\\ll-1)} \\\\\n",
+    "\\frac{\\partial \\tilde\\y_\\llp}{\\partial \\y_{(\\ll-1)}} & = & \\frac{\\partial \\y_{(\\ll-1)}}{\\partial \\y_{(\\ll-1)}} & \\text{since proxy implements } \\tilde\\y_\\llp = \\y_{(\\ll-1)} \\\\\n",
     "& = & 1\n",
     "\\end{array}\n",
     "$$\n",
     "\n",
-    "The Loss Gradient flows through the operator unchanged !\n",
-    "\n",
-    "This solution is called a *Straight Through Estimator*."
+    "The Loss Gradient flows through the operator unchanged !\n"
    ]
   },
   {
@@ -340,13 +356,17 @@
     }
    },
    "source": [
+    "Allowing the Gradient to flow backwards unchanged allows us to construct\n",
+    "something called a *Straight Through Estimator*\n",
+    "- treat problematic layer $\\ll$ as a pass-through of input $\\y_{(\\ll-1)}$ to $\\y_\\llp$\n",
+    "\n",
     "A consequence of using a Straight Through Estimator is that \n",
     "- Back propagation does not compute the true gradient\n",
     "$$\n",
-    "\\frac{\\partial \\loss}{\\partial \\W_\\ll}\n",
+    "\\frac{\\partial \\loss}{\\partial \\W_\\llp}\n",
     "$$\n",
     "- but results in a value $g_i$ (referred to as  the *coarse gradient*)\n",
-    "    - not clear whether $g_i$ is the gradient of any true funcion\n"
+    "    - not clear whether $g_i$ is the gradient of any true function\n"
    ]
   },
   {
@@ -360,11 +380,11 @@
     "This seems disturbing at first.\n",
     "\n",
     "But recall that the purpose of computing the true gradient\n",
-    "- is to update weights $\\W_\\ll$\n",
+    "- is to update weights $\\W_\\llp$\n",
     "$$\n",
-    "\\W_\\ll = \\W_\\ll - \\alpha * \\frac{\\partial \\loss}{\\partial \\W_\\ll}\n",
+    "\\W_\\ll = \\W_\\llp - \\alpha * \\frac{\\partial \\loss}{\\partial \\W_\\llp}\n",
     "$$\n",
-    "- **As long as the direction $g_i$ has a non-zero correlation with $\\frac{\\partial \\loss}{\\partial \\W_\\ll}$**\n",
+    "- **As long as the direction $g_i$ has a non-zero correlation with $\\frac{\\partial \\loss}{\\partial \\W_\\llp}$**\n",
     "    - the weight update step will move in the direction of reducing the Loss\n",
     "    \n",
     "Hence, the Straight Through Estimator can be used for the purpose of Gradient Descent."
@@ -374,7 +394,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -417,7 +437,8 @@
     "$$\n",
     "\n",
     "We can use the Stop Gradient operator\n",
-    "- to prevent the computation of a gradient for a problematic operation"
+    "- to prevent the computation of a gradient for a problematic operation/layer\n",
+    "- but we must take an extra step to allow the Loss Gradient to flow backwards through the problematic operation/layer"
    ]
   },
   {
@@ -460,9 +481,21 @@
     "The line of code\n",
     "\n",
     "        out = in + tf.stop_gradient(result - in)\n",
-    "        \n",
-    "seems odd: mathematically, it just copies `result` to `out`\n",
     "\n",
+    "is the implementation of the *Straight Through Estimator**.\n",
+    "\n",
+    "It\n",
+    "seems odd: mathematically, it just copies `result` to `out`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "But\n",
     "- it connects the output of the operator (the LHS of the assignment)\n",
     "$$\\y_\\llp = \\text{out}$$\n",
@@ -471,7 +504,8 @@
     "- causing the Loss Gradient to flow from `out` to `in` during Back Propagation\n",
     "    - unchanged\n",
     "\n",
-    "Thus, a Straight Through Estimator using an Identity proxy function has been created."
+    "Thus, a Straight Through Estimator using an Identity proxy function has been created\n",
+    "by the odd-looking statement."
    ]
   },
   {
