--- a/Transformers_Scaling.ipynb
+++ b/Transformers_Scaling.ipynb
@@ -49,6 +49,7 @@
        "\\newcommand{\\dim}{d}\n",
        "\\newcommand{\\idxspatial}{{\\text{idx}}}\n",
        "\\newcommand{\\summaxact}{\\text{max}}\n",
+       "\\newcommand{idxb}{\\mathbf{i}}\n",
        "%\n",
        "%\n",
        "\n",
@@ -85,6 +86,7 @@
        "\\newcommand{\\margin}{{\\mathbb{m}}}\n",
        "\\newcommand{\\lmk}{\\boldsymbol{\\ell}}\n",
        "%\n",
+       "%\n",
        "% Functions with arguments\n",
        "\\def\\xsy#1#2{#1^#2}\n",
        "\\def\\rand#1{\\tilde{#1}}\n",
@@ -110,6 +112,11 @@
        "%\n",
        "% Expectation operator\n",
        "\\def\\Exp#1{\\underset{#1} {\\operatorname{\\mathbb{E}}} }\n",
+       "%\n",
+       "% VAE\n",
+       "\\def\\prs#1#2{\\mathcal{p}_{#2}(#1)}\n",
+       "\\def\\qr#1{\\mathcal{q}(#1)}\n",
+       "\\def\\qrs#1#2{\\mathcal{q}_{#2}(#1)}\n",
        "%\n",
        "% Reinforcement learning\n",
        "\\newcommand{\\Actions}{{\\mathcal{A}}} \n",
@@ -157,7 +164,10 @@
     "\n",
     "There are many LLM's, with varying choices of\n",
     "- number of parameters $N$\n",
-    "- size of training dataset $D$\n",
+    "-size of training data $D$\n",
+    "    - number of tokens trained on\n",
+    "    - not *distinct* tokens in dataset\n",
+    "        - same token encountered in each epoch is counted once per epoch\n",
     "- amount of compute for training $C$\n",
     "\n",
     "Here is a table from the [GPT-3 paper](https://arxiv.org/pdf/2005.14165.pdf#page=46)"
@@ -589,48 +599,15 @@
     }
    },
    "source": [
-    "# Smaller is better: Inference time\n",
+    "# The future of large models as seen through Scaling laws\n",
     "\n",
-    "We have been focused on the cost of *training*\n",
-    "- cost of a forward pass\n",
-    "- cost of a backward pass\n",
-    "- summed over many training examples\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Post-training, at test time, the cost of prediction is\n",
-    "- cost of a forward pass\n",
+    "The Scaling laws suggest\n",
+    "- given a fixed compute budget $C$\n",
+    "- there is an optimal number of parameters $N$ and number of training tokens $D$\n",
     "\n",
-    "The way that $N$ (number of parameters) usually increases in a Transformer Architecture\n",
-    "- is by stacking an increasing number of Transformer blocks."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "This increases the path length of a forward path.\n",
-    "\n",
-    "So making *predictions* using a bigger model will incur a longer latency than doing so in a smaller model.\n",
-    "\n",
-    "This means\n",
-    "- as a user of the model: you will wait longer for a result\n",
-    "- as a service provider\n",
-    "    -  you must increase (relative to a smaller model) the amount of compute resource\n",
-    "\n",
-    "\n",
-    "So smaller models have test-time as well as train-time advantages."
+    "Let's evaluate GPT-3, which pre-existed the scaling laws, in terms of what we now know.\n",
+    "- $N_\\text{GPT} = 175B$\n",
+    "- $D_\\text{GPT} = 0.3 T$"
    ]
   },
   {
@@ -641,22 +618,32 @@
     }
    },
    "source": [
-    "# The future of large models as seen through Scaling laws\n",
-    "\n",
-    "Let's examine the newer scaling results as they apply to GPT-3, where \n",
-    "- $N_\\text{GPT} = 175B$\n",
-    "- $D_\\text{GPT} = 0.3 T$\n",
-    "\n",
-    "According to the result\n",
+    "According to the Scaling Laws:\n",
     "- GPT-3 is *under-trained* in time by a large factor\n",
     "    $$\\frac{C^*(N_\\text{GPT},D_\\text{GPT})}{C_\\text{GPT}} = \\frac{4.4 * 10^{24} \\text{ Flops}}{3.1 * 10^{23}\\text{Flops}} > 10$$\n",
-    "- GPT-3 is *under-trained* in data by a large factor\n",
+    "- GPT-3 is *under-trained* in number of tokens by a large factor\n",
     "\n",
     "$$\n",
     "\\frac{D^*(N_\\text{GPT})}{D_\\text{GPT}}  = \\frac{4.2 TB}{0.3 TB} \\gt 10\n",
-    "$$\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "In order to take advantage of the 175 billion parameters, GPT-3 needed to be trained\n",
+    "- for much longer\n",
+    "- on many more tokens\n",
     "\n",
-    "The under-training can be seen in the following graph"
+    "Here is a plot of the optimal line\n",
+    "- we can see GPT-3 is above the line\n",
+    "- too large a $N$/too small a $D$\n",
+    "    - for the given $C$"
    ]
   },
   {
@@ -706,7 +693,7 @@
     }
    },
    "source": [
-    "To support this hypothesis, the authors\n",
+    "The authors validated this hypothesis by comparing two models\n",
     "- started with a large model called Gopher with $N_\\text{Gopher} = 280B$\n",
     "- trained a smaller model called Chinchilla with $N_\\text{Chinchilla} = 70 B$\n",
     "- using the same compute $C_\\text{Chinchilla} = C_\\text{Gopher}$\n",
@@ -753,6 +740,171 @@
     "- encode \"procedural\" knowledge rather than factual knowledge\n",
     "    \n",
     "Thus, the trend towards models of ever increasing size is probably over."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Inference budget\n",
+    "\n",
+    "We have been focused on the *training budget*\n",
+    "- cost of a forward pass\n",
+    "- cost of a backward pass\n",
+    "- summed over many training examples\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "But larger models also require more compute (and greater latency) at *inference* time\n",
+    "- typical way of increasing model size is stacking more Transformer blocks\n",
+    "- deeper stack\n",
+    "    - greater latency\n",
+    "    - increased compute\n",
+    "\n",
+    "Since we train a model once\n",
+    "- but perform inference many times\n",
+    "- perhaps we should focus on the *inference budget* rather than the *training budget*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "A detailed examination of [inference cost](https://kipp.ly/transformer-inference-arithmetic/#flops-counting)\n",
+    " approximates the number of Flops $F$ for once inference at\n",
+    " $$\n",
+    " F = n_\\text{layers} * 24 * d_\\text{model}^2\n",
+    " $$\n",
+    " \n",
+    " Since $N$ is proportional to $n_\\text{layers}$\n",
+    " - inference cost is proportional to model size $N$\n",
+    " \n",
+    "So a smaller model size $N$ can reduce our inference budget."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Recall\n",
+    "- a larger model achieves a given loss level *on fewer tokens* then a smaller model\n",
+    "\n",
+    "But, fixing the loss level\n",
+    "- a smaller model can achieve the same loss\n",
+    "- at the cost of training on more tokens\n",
+    "\n",
+    "The smaller model's inference cost is lower\n",
+    "- so trading off more tokens for fewer parameters\n",
+    "- may be *inference time* optimal\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "This idea was explored in ([LlaMa](https://arxiv.org/pdf/2302.13971.pdf))\n",
+    "- optimizes inference\n",
+    "- by training smaller models\n",
+    "- on *more data* than required for a larger model to achieve the same loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<table>\n",
+    "    <tr>\n",
+    "        <center><strong>LlAMA loss vs training tokens</strong></center>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <img src=\"images/llama-training-curves.png\" width=50%>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        Attribution: https://arxiv.org/pdf/2302.13971.pdf#page=3\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "From the above graph: consider a Loss Level of 1.7\n",
+    "- the $N = $ 65B model requires $D = $ 600B tokens\n",
+    "- the $N = $ 33B model requires $D = $ 800B tokens\n",
+    "\n",
+    "The author suggests that, for the same loss level, we can trade off\n",
+    "- doubling $N$\n",
+    "- for an increase of $D$ by $40 \\%$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The result is that the current trend in LLM's is to\n",
+    "- small models\n",
+    "- trained on many tokens\n",
+    "- so as to optimize the inference budget\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Summary\n",
+    "\n",
+    "The Scaling laws demonstrate that\n",
+    "- Larger models have the *potential* for smaller loss than smaller models\n",
+    "    - but require more  (compared to a smaller model) data and compute  to achieve their potential\n",
+    "- For a fixed Loss level, compared to a smaller model\n",
+    "    - larger models achieve the loss with fewer tokens (more data efficient)\n",
+    "    - **but** with a larger compute requirement (higher **training budget**)\n",
+    "    - a smaller model can achieve the same Loss\n",
+    "        - using more training tokens\n",
+    "        - **and** is more cost effective at inference time\n",
+    "        \n",
+    "Thus, the trend is toward smaller models."
    ]
   },
   {
