--- a/VQ_VAE_Generative.ipynb
+++ b/VQ_VAE_Generative.ipynb
@@ -194,6 +194,34 @@
    "source": [
     "# Introduction\n",
     "\n",
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "    <b>TL;DR</b> \n",
+    "    <br>\n",
+    "    <ul>\n",
+    "        <li>Text is represented as\n",
+    "            <ul>\n",
+    "                <li>a sequence of integers: an integer index into the list of tokens in the vocabulary</li>\n",
+    "            </ul>\n",
+    "        <li>We want to represent other types of data (e.g., images) as \n",
+    "            <ul>\n",
+    "                <li>a sequence of integers: an integer index into a \"code book\": finite list of vectors</li>\n",
+    "            </ul>\n",
+    "        <li>By making the \"shape\" (sequence) and \"type\" (integer) compatible between text and other data types</li>\n",
+    "            <ul>\n",
+    "                <li>We facilitate mixing text and other data types</li>\n",
+    "                <li>Will enable an implementation of Text to Image as a simple extension of the Language Modeling objective</li>      \n",
+    "    </ul>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "We now present an Autoencoder with a twist\n",
     "- the latent representation produced for an input\n",
     "- is limited to be one member of a *finite list* of vectors\n",
@@ -1213,13 +1241,9 @@
     }
    },
    "source": [
-    "# Learning the distribution of latents\n",
+    "# Code\n",
     "\n",
-    "In order to generate examples\n",
-    "- we sample from the latents $\\z$\n",
-    "\n",
-    "For a VAE, we assume a functional form for the prior distribution of latents  $\\qr{\\z}$\n",
-    "- a *convenient* choice is Normal.  See [our VAE module](VAE_Generative.ipynb#Choosing-$\\qr{\\z}$)"
+    "[Here](https://colab.research.google.com/github/keras-team/keras-io/blob/master/examples/generative/ipynb/vq_vae.ipynb#scrollTo=LWYJf1MYvzap) is a Colab notebook.\n"
    ]
   },
   {
@@ -1230,13 +1254,13 @@
     }
    },
    "source": [
-    "The authors of this paper want to *avoid an assumption of the prior distribution $\\qr{\\z}$*\n",
+    "# Creating synthetic examples\n",
     "\n",
-    "Instead: they will *learn* the distribution\n",
-    "- through auto-regressive modeling of the sequence $\\z$\n",
-    "- when we flatten the spatial/temporal dimensions of $\\z_q(\\x)$, we get a sequence\n",
+    "Consider an example that is an Image.\n",
     "\n",
-    "Retaining spatial/temporal dimensions in $\\z_q(\\x)$ is key to achieving this goal."
+    "It is a structured arrangement of feature vectors\n",
+    "- a 2D grid\n",
+    "- each element of the grid is a vector of features"
    ]
   },
   {
@@ -1247,21 +1271,84 @@
     }
    },
    "source": [
-    "The authors *flatten*\n",
-    "- the spatial/temporal dimensions $(n_1 \\times n_2 \\ldots \\times n_{\\#S})$ of $\\mathbf{Z}$\n",
+    "In general: our examples may have an arbitrary number of dimensions.\n",
+    "\n",
+    "By convention, we will refer\n",
+    "- to the last dimensions as the \"feature\" dimension\n",
+    "- all the preceding dimensions as *non-feature* dimensions\n",
+    "    - for an Image: *spatial* dimensions\n",
+    "\n",
+    "Denoting `#S` as the number of non-feature dimensions and $n_{(0)}$$ as the number of features, examples have shape\n",
+    "\n",
+    "$$(n_1 \\times  \\ldots \\times n_{\\#S} \\times n_{(0)})$$\n",
+    "where `#S` denotes the number of non-feature dimensions (`#S` = 2 for an Image)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The Encoder creates an output $\\z_e(\\x)$  of shape\n",
+    "$$(n_1 \\times  \\ldots \\times n_{\\#S} \\times n_e)$$\n",
+    "which is quantized into $\\z_q(\\x)$  of shape\n",
+    "$$(n_1 \\times  \\ldots \\times n_{\\#S} \\times 1)$$\n",
+    "\n",
+    "That is: the feature dimension of $\\z_q(\\x)$  is a single integer index into a learned codebook."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "In order for us to generate synthetic examples\n",
+    "- we must create a Tensor $\\z_q(\\x)$  of $(n_1 \\times  \\ldots \\times n_{\\#S} \\times 1)$ integers (*latents*)\n",
+    "- feed this to the Decoder\n",
+    "- get a synthetic example as output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Learning the distribution of latents\n",
+    "\n",
+    "But we can't create $\\z_q(\\x)$ *completely at random*.\n",
+    "- The elements at adjacent locations in the non-feature dimensions may not be **independent**\n",
+    "\n",
+    "For example: consider an Image\n",
+    "- the pixels in an image are related to one another\n",
+    "\n",
+    "We must learn a distribution of $\\z_q(\\x)$ that respects the dependencies."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "One solution\n",
+    "- flatten  $\\z_q(\\x)$\n",
+    "- from shape $(n_1 \\times  \\ldots \\times n_{\\#S} \\times 1)$\n",
     "- into a sequence\n",
     "$$\n",
     "\\z_{(1)}, \\z_{(2)}, \\ldots, \\z_{(n_1 * n_2 \\ldots * n_{\\#S}) }\n",
     "$$\n",
-    "\n",
-    "For example: for two spatial dimensions $(h \\times w)$\n",
-    "- $\\z_{(k)}$ \n",
-    "- is the quantization of $\\mathbf{Z}^{(r)}_c$\n",
-    "- the element at row $r$ column $c$\n",
-    "- for $r = \\text{int}( \\frac{k}{w}), c = (k \\mod w)$\n",
-    "\n",
-    "\n",
-    "\n"
+    "of integer indices."
    ]
   },
   {
@@ -1272,16 +1359,13 @@
     }
    },
    "source": [
-    "The authors then learn an autoregressive model for sequences\n",
-    "\n",
+    "We can then learn the distribution of the latents\n",
+    "- through auto-regressive modeling of the sequence sequence $\\z$\n",
     "$$\n",
     "\\pr{\\z_{(k+1)} | \\z_{(1)}, \\ldots, \\z_{(k)} }\n",
     "$$\n",
     "\n",
-    "by using some Autoregressive model (e.g, PixelCNN) to predict $\\z_{(k+1)}$ from its predecessors\n",
-    "in the sequence.\n",
-    "\n",
-    "We are familiar with this Autoregressive model (in the case of NLP) as the Language Model objective."
+    "This is just like the Language Model objection for NLP."
    ]
   },
   {
@@ -1292,15 +1376,17 @@
     }
    },
    "source": [
-    "Unlike the \"convenient\" common choice of Normality for the VAE\n",
-    "- the Autoregressive model does **not** assume the type of the distribution\n",
+    "**Aside**\n",
     "\n",
-    "The conditional distribution \n",
-    "$$\\pr{\\z_{(k+1)} | \\z_{(1)}, \\ldots, \\z_{(k)} }$$\n",
-    "of each element \n",
-    "- is learned\n",
-    "- is easy to sample\n",
-    "    - seed the model with $\\z_{(1)}$, generate the rest of the sequence one element at a time\n"
+    "*Learning* a distribution is less restrictive than *assuming* a distribution\n",
+    "\n",
+    "For the case of \"structured\" examples: we have no choice.\n",
+    "- adjacent elements are not independent\n",
+    "\n",
+    "But recall that, for the VAE, we *assumed* that the latents came from a Normal distribution.\n",
+    "\n",
+    "Use Auto-regressive modeling is a nice \"trick\" to learn distributions rather than having to assume\n",
+    "a \"convenient\" functional form."
    ]
   },
   {
