--- a/Vision_Transformer.ipynb
+++ b/Vision_Transformer.ipynb
@@ -304,7 +304,7 @@
    },
    "source": [
     "So how exactly do we go from a spatially organized grid $(w \\times h \\times c)$ of pixel intensities (RGB) to the sequences\n",
-    "that a Transformed can process ?\n",
+    "that a Transformer can process ?\n",
     "\n",
     "The obvious answer\n",
     "- Flatten the spatial dimensions into a sequence (\"raster order\": left to right, top to bottom)\n",
@@ -337,7 +337,7 @@
     "Just like text tokens, the patches are processed through an Embedding layer\n",
     "- are encoded as vectors using a Linear Projection\n",
     "    - maps a flattened vector of length $(16 * 16)$ into a vector of length $d$\n",
-    "    - mapping is a *learned embedding** (just like word embeddings)\n",
+    "    - mapping is a **learned embedding** (just like word embeddings)\n",
     "\n",
     "The result of converting to patches followed by embedding is a sequence of image embeddings\n",
     "- of length $T$ (number of patches)\n",
